force-app/main/default/objects/QuoteLineItem/fields/Annual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annual_Amount__c</fullName>
    <description>Annualized amount pulled from related Opportunity Line Item</description>
    <label>Annual Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>