force-app/main/default/objects/QuoteLineItem/fields/Days_In_Service_Year__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Service_Year__c</fullName>
    <description>Number of days in the service year (365 or 366 for leap years)</description>
    <formula>IF(Service_Year_Is_Leap__c, 366, 365)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Service Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>