force-app/main/default/objects/QuoteLineItem/fields/Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_End_Date__c</fullName>
    <description>3-level hierarchy: QLI Service Date → Quote Order Date → Opportunity Contract Date</description>
    <formula>IF(NOT(ISBLANK(Service_End_Date__c)), Service_End_Date__c, IF(NOT(ISBLANK(Quote.Order_End_Date__c)), Quote.Order_End_Date__c, Quote.Opportunity.Contract_End_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>