force-app/main/default/objects/QuoteLineItem/fields/Service_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Service_Period_Days__c</fullName>
    <description>Number of days in the service period for accurate calculations</description>
    <formula>Effective_End_Date__c - Effective_Start_Date__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Period (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>