force-app/main/default/objects/QuoteLineItem/fields/Service_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Start_Date__c</fullName>
    <description>Individual line item start date (overrides quote-level date)</description>
    <label>Service Start Date</label>
    <type>Date</type>
</CustomField>