force-app/main/default/objects/QuoteLineItem/fields/Service_Year_Is_Leap__c.field-meta.xml
<CustomField>
    <fullName>Service_Year_Is_Leap__c</fullName>
    <description>Determines if the service period spans a leap year for accurate calculations</description>
    <formula>OR(
  /* Check if period spans Feb 29 of START year */
  AND(
    MOD(YEAR(Effective_Start_Date__c), 4) = 0,
    OR(
      MOD(YEAR(Effective_Start_Date__c), 400) = 0,
      MOD(YEAR(Effective_Start_Date__c), 100) &lt;&gt; 0
    ),
    MONTH(Effective_Start_Date__c) &lt;= 2,
    OR(
      YEAR(Effective_End_Date__c) &gt; YEAR(Effective_Start_Date__c),
      AND(
        YEAR(Effective_End_Date__c) = YEAR(Effective_Start_Date__c),
        MONTH(Effective_End_Date__c) &gt;= 2,
        OR(
          MONTH(Effective_End_Date__c) &gt; 2,
          DAY(Effective_End_Date__c) &gt;= 29
        )
      )
    )
  ),
  /* Check if period spans Feb 29 of END year */
  AND(
    MOD(YEAR(Effective_End_Date__c), 4) = 0,
    OR(
      MOD(YEAR(Effective_End_Date__c), 400) = 0,
      MOD(YEAR(Effective_End_Date__c), 100) &lt;&gt; 0
    ),
    OR(
      YEAR(Effective_Start_Date__c) &lt; YEAR(Effective_End_Date__c),
      AND(
        YEAR(Effective_Start_Date__c) = YEAR(Effective_End_Date__c),
        MONTH(Effective_Start_Date__c) &lt;= 2,
        OR(
          MONTH(Effective_Start_Date__c) &lt; 2,
          DAY(Effective_Start_Date__c) &lt;= 29
        )
      )
    ),
    MONTH(Effective_End_Date__c) &gt;= 2,
    OR(
      MONTH(Effective_End_Date__c) &gt; 2,
      DAY(Effective_End_Date__c) &gt;= 29
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Year Is Leap Year</label>
    <type>Checkbox</type>
</CustomField>