force-app/main/default/objects/QuoteLineItem/fields/Term_Length_Months__c.field-meta.xml
<CustomField>
    <fullName>Term_Length_Months__c</fullName>
    <description>Calculates whole months between effective dates with 1-month minimum. Uses 30.44-day average then rounds to whole months for clean billing amounts and minimum revenue protection.</description>
    <formula>MAX(1, ROUND((Effective_End_Date__c - Effective_Start_Date__c) / 30.44, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term Length (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>