force-app/main/default/objects/QuoteLineItem/fields/Usage_CPUh__c.field-meta.xml
<CustomField>
    <fullName>Usage_CPUh__c</fullName>
    <label>Usage / CPUh</label>
    <length>40</length>
    <type>Text</type>
</CustomField>